# ccatkidlib

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
analysis/: Resonator.py  Sweep.py  Timestream.py  drone.py  file_utils.py  resonator.py  resonator_model_v3.py  sweep.py  timestream.py
analysis/dev/: network.py  pair.py  target.py  vna.py
analysis/res_fit/: phase_fit.py
ccatkidlib/: _version.py  io.py  log.py  rfsoc_io.py  style.py  utils.py
ccatkidlib/analysis/: analysis_config.yaml  data.py  detector.py  example_analysis_config.yaml  fit.py  mp_utils.py  network.py  pair.py  plot_utils.py  resonator.py  sweep.py  target.py  timestream.py  vna.py
ccatkidlib/rfsoc/: arg_utils.py  example_drone_config.yaml  example_system_config.yaml  rfsoc100_config.yaml  rfsoc101_config.yaml  rfsoc_daq.py  rfsoc_timestream.py  system_config.yaml
docs/: conf.py  glossary.rst  index.rst
docs/source/: conf.py  glossary.rst  index.rst
local_notebooks/: 20230711_FTS_trail1.ipynb  Untitled1.ipynb  ccatkidlib_testing.ipynb  check_streaming_data.ipynb  check_streaming_data_fts.ipynb  find_optical_power.ipynb  g3_file_testing.ipynb  quickDataViewer_20230720.ipynb  quicklook_data.ipynb  stream_data.py
local_notebooks/.ipynb_checkpoints/: captain_packets-checkpoint.ipynb  check_streaming_data-checkpoint.ipynb  g3_file_testing-checkpoint.ipynb  quickDataViewer_20230720-checkpoint.ipynb
rfsoc/: config.yaml  drones_config_1.yaml  example_system_config.yaml  rfsoc100_config.yaml  rfsoc101_config.yaml  rfsoc_daq.py  rfsoc_io.py  rfsoc_timestream.py  style.py  system_config.yaml  tone_placement.py  utils.py
scripts/: BathHeater.py  ColdloadHeater.py  RFSoC_DAQ.py  initialize_rfsoc_to_stream.py
scripts/analysis/: analysis_config.yaml  fit.py
scripts/atten_sweep/: atten_sweep.py
scripts/bath_sweep/: grab_baselines.py
scripts/beam_map/: beam_config.yaml  beam_map.py  beam_map_modcam_drone_config_1.yaml  beam_map_modcam_rfsoc100_config.yaml  beam_map_modcam_rfsoc101_config.yaml  beam_map_modcam_system_config.yaml  measure_beam.py
scripts/controller/: test.py
scripts/crosstalk/: coldload_system_config_crosstalk_2.yaml  override_drone_list.yaml
scripts/fts/: fts_system_config.yaml
scripts/loopback/: loopback.py  (+3 more)
source/: conf.py  index.rst
(+123 files in other folders)
