[project]
name = "ccatkidlib"
description = "Data acquisition and analysis library for CCAT Observatory KIDs using RFSoC"
readme = "README.md"
authors = [
    { name = "Darshan Patel", email = "dp649@cornell.edu" }
]
license = { text = "BSD 2-Clause License" }
requires-python = ">=3.10"

dependencies = [
    "bokeh==3.6.3",
    "datashader==0.18.2",
    "fabric==3.2.2",
    "holoviews==1.21.0",
    "hvplot==0.12.0",
    "jinja2==3.1.4",
    "lmfit==1.3.2",
    "matplotlib==3.9.2",
    "numba==0.60.0",
    "ocs==0.11.3",
    "paramiko==3.5.0",
    "polars==1.32.0",
    "pyarrow==21.0.0",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "setuptools==75.8.0",
    "so3g==0.2.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
    "tqdm==4.67.1",
]
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/ccatobs/ccatkidlib"

[build-system]
requires = ["setuptools>=80.0", "wheel", "setuptools_scm[toml]>=9.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_file = "ccatkidlib/_version.py"

[tool.setuptools.packages.find]
